# engram

./: .env.example  .gitignore  CLAUDE-CODE-SESSIONS.md  CLAUDE.md  README.md  ai-product-director.json  cloud-schema.sql  devops-engineer.json  extract.ts  index.ts  init.ts  inject.ts  marketing-strategist.json  mcp-config.json  migrate-to-cloud.ts  package.json  pnpm-lock.yaml  sdk.test.ts  senior-data-engineer.json  server.ts  startup-founder.json  storage.test.ts  storage.ts  tsconfig.json  vitest.config.ts
database/: cloud-schema.sql  local-schema.sql
scripts/: decay-cron.ts  export.ts  init.ts  migrate-to-cloud.ts  setup-mcp.ts  summarize-cron.ts
src/app/: layout.tsx  page.tsx
src/app/api/billing/checkout/: route.ts
src/app/api/billing/status/: route.ts
src/app/api/billing/webhook/: route.ts
src/app/api/memory/: route.ts
src/app/api/memory/chat/: route.ts
src/app/api/memory/export/: route.ts
src/app/api/memory/health/: route.ts
src/app/api/memory/ingest/: route.ts
src/app/api/memory/inject/: route.ts
src/app/api/memory/threads/: route.ts
src/app/upgrade/: page.tsx
src/lib/: extract.ts  inject.ts  rateLimit.ts  storage.ts
src/lib/storage/: cloud.ts  local.ts  types.ts
src/mcp/: server.ts
src/sdk/n8n/: MemoryEngine.node.ts  n8n-workflow-sample.json  n8n-workflow.d.ts
src/sdk/python/: README.md  pyproject.toml
src/sdk/python/memory_engine/: __init__.py  client.py  langchain.py
src/sdk/ts/: index.ts
tests/: api.test.ts  extract.test.ts  mcp.test.ts  storage.test.ts
(+1 files in other folders)
