[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-engine-sdk"
version = "0.1.0"
description = "Local-first persistent memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Varun Tyagi", email = "varun@meetvaruntyagi.com" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27", "openai>=1.0"]

[project.optional-dependencies]
langchain = ["langchain>=0.1"]

[project.urls]
Homepage = "https://github.com/varuntyagi83/engram"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_engine*"]
